15/11/10 Julien Dutheil
* Added topology comparison tools.
* New unit testing framework.

18/05/10 Julien Dutheil
* new TreeDrawing framework, fully event-driven.

24/03/10 -*- Version 1.9.0 -*-

11/03/10 Julien Dutheil
* Nexus format now allows lower case keywords ([biopp-devel-forum:287])
* GY94 and MG94 now have frequency option like YN98.

10/03/10 Julien Dutheil
* Added stationarity option in non-homogeneous models.

09/03/10 Julien Dutheil
* Added reparametrization option in optimization methods.

26/02/10 Nicolas Rochette and Julien Dutheil
* More efficient TreeTemplateTools::getDistanceMatrix.

08/12/10 Julien Dutheil
* Now compiles with -Weffc++!
* A lot of code updates and small bugs fixed!
* BioNJ is now faster when using the full constructor.
* Parsimony and Likelihood data structure improved.
* Nucleotide and ProteinSubstitutionModels are now full interfaces.
* No more ProteinSubstitutionModelWithFrequencies... corresponding models take
as input an optional FrequenciesSet object.

29/12/09 Julien Dutheil
* Improved TreeDrawing classes: added Listeners.

26/12/09 Julien Dutheil
* Removed all "using namespace std" in header files.
* Code cleaning.

15/12/09 Laurent Guegen
* Added classes for mixed models.

08/12/09 Julien Dutheil
* First draft of new TreeLikelihood model iterators
* Updated TreeLikelihood interfaces
* New interface SitePartitionTreeLikelihood interface, allowing different
  sites to have a distinct substitution model.

24/11/09 Julien Dutheil
* Cleaned substitution mapping classes, and added a new one.

31/10/09 Julien Dutheil
* Code cleaning in FrequenciesSet.

19/10/09 Julien Dutheil
* Bug fixed in node setFather method + new check and warning messages in tree
  edition methods.

21/08/09 Julien Dutheil
* Added config files for CMake.

12/08/09 Bastien Boussau & Julien Dutheil
* Function getValue in likelihood classes now does not repeat calculations
  if called several times on the same parameters.

09/08/09 Julien Dutheil