@@ -92,7 +92,7 @@ void AnalyticalSubstitutionCount::computeCounts(double length) const
 
 /******************************************************************************/
 
-double AnalyticalSubstitutionCount::getNumberOfSubstitutions(unsigned int initialState, unsigned int finalState, double length) const
+double AnalyticalSubstitutionCount::getNumberOfSubstitutions(unsigned int initialState, unsigned int finalState, double length, unsigned int type) const
 {
   if (length == currentLength_) return m_(initialState, finalState);
   if(length < 0.000001) return initialState == finalState ? 0. : 1.; //Limit case!
@@ -105,7 +105,7 @@ double AnalyticalSubstitutionCount::getNumberOfSubstitutions(unsigned int initia
 
 /******************************************************************************/
 
-Matrix<double>* AnalyticalSubstitutionCount::getAllNumbersOfSubstitutions(double length) const
+Matrix<double>* AnalyticalSubstitutionCount::getAllNumbersOfSubstitutions(double length, unsigned int type) const
 {
   if (length == currentLength_) return new RowMatrix<double>(m_);
   if (length < 0.000001) // Limit case!
